kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: short
  namespace: url
  labels:
    app: short
spec:
  selector:
    app: short
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort : 8080
