kustomize/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: short
  namespace: url
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway-alb # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - eventengine.kr
